<resources>
    <string name="app_name">Patagonia</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Mapa">Mapa</string>
    <string name="Descubre">Descubre</string>
    <string name="Grupos">Grupos</string>
    <string name="Historial">Historial</string>
    <string name="Informacion">Informacion</string>
</resources>
