<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_grupos"
        android:icon="@drawable/grupos"
        android:title="@string/Grupos" />

    <item
        android:id="@+id/navigation_historial"
        android:icon="@drawable/historial"
        android:title="@string/Historial" />

    <item
        android:id="@+id/navigation_mapa"
        android:icon="@drawable/maps"
        android:title="@string/Mapa" />
    <item
        android:id="@+id/navigation_descubre"
        android:icon="@drawable/descubrir"
        android:title="@string/Descubre" />
    <item
        android:id="@+id/navigation_informacion"
        android:icon="@drawable/informacion"
        android:title="@string/Informacion" />
</menu>
